fix: add some grid changes header and z-index. add responsiveness to program and block sass files

--- a/styles/sass/_block.scss
+++ b/styles/sass/_block.scss
@@ -10,6 +10,7 @@
         justify-content: center;
         align-items: center;
         text-align: center;
+        padding: 3rem;
     }
 
     h2{
@@ -19,7 +20,6 @@
 
 .dresscode{
     background-color: $bgOffGrey;
-    padding: 3rem;
 
     a{
         text-decoration: none;
@@ -30,12 +30,29 @@
 
 .convinced{
     background-color: $primaryBlue;
-    padding: 3rem;
 
     .button{
         color: $bgColor;
         text-decoration: none;
         // height: fit-content;
         // padding: 0.3rem;
+    }
+}
+
+@media (max-width: 800px) and (min-width: 640px) { 
+    .blocks{
+        grid-template-columns: 1fr;
+        grid-template-rows: 1fr 1fr;
+    }
+}
+
+@media (max-width: 640px) {
+    .blocks{
+        grid-template-columns: 1fr;
+        grid-template-rows: 1fr 1fr;
+
+        div{      
+            padding: 2rem;
+        }
     }
 }
